tests/NormalTests/paczka1/small_fuzzy/70444047.err
Error in line 5: EKsWXs1 A199 57,8
Error in line 8: dOZM6H9J7e2 S279 38,0
